bug fix em localizacao

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </table>
         </section>
 
-        <section class="localização">
+        <section class="localizacao">
 
             <h2>localização</h2>
 
